# talus

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  PLAN.md  README.md
benchmarks/: CMakeLists.txt
cmake/: talusConfig.cmake.in
examples/: CMakeLists.txt
include/talus/: concepts.hpp  geometry.hpp  talus.hpp
include/talus/detail/: pool_alloc.hpp
tests/: CMakeLists.txt  foundation_tests.cpp  pool_alloc_tests.cpp
